# degen-fund-staker

./: Anchor.toml
migrations/: deploy.ts
programs/staker/: Cargo.toml
programs/staker/src/: lib.rs
programs/staker/src/instructions/: mod.rs  stake.rs  unstake.rs
tests/: staker.ts  step-staking.ts  utils.ts
